@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.6
+Release: 0.7
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -57,10 +57,18 @@ verifying, querying, and updating software packages. Each software
 package consists of an archive of files along with information about
 the package like its version, a description, etc.
 
+%package libs
+Summary:  Libraries for manipulating RPM packages.
+Group: Development/Libraries
+Requires: rpm = %{rpm_version}-%{release}
+
+%description libs
+This package contains the RPM shared libraries.
+
 %package devel
 Summary:  Development files for manipulating RPM packages.
 Group: Development/Libraries
-Requires: rpm = %{rpm_version}
+Requires: rpm = %{rpm_version}-%{release}
 
 %description devel
 This package contains the RPM C library and header files. These
@@ -76,7 +84,7 @@ will manipulate RPM packages and databases.
 %package build
 Summary: Scripts and executable programs used to build packages.
 Group: Development/Tools
-Requires: rpm = %{rpm_version}, patch >= 2.5, file
+Requires: rpm = %{rpm_version}-%{release}, patch >= 2.5, file
 Provides: rpmbuild(VendorConfig) = 4.1-1
 
 %description build
@@ -87,7 +95,7 @@ that are used to build packages using the RPM Package Manager.
 %package python
 Summary: Python bindings for apps which will manipulate RPM packages.
 Group: Development/Libraries
-Requires: rpm = %{rpm_version}
+Requires: rpm = %{rpm_version}-%{release}
 Requires: python >= %{with_python_version}
 Requires: elfutils >= 0.55
 
@@ -280,11 +288,6 @@ exit 0
 %rpmattr	%{__bindir}/rpmquery
 %rpmattr	%{__bindir}/rpmverify
 
-%{__libdir}/librpm-4.3.so
-%{__libdir}/librpmdb-4.3.so
-%{__libdir}/librpmio-4.3.so
-%{__libdir}/librpmbuild-4.3.so
-
 %attr(0755, @RPMUSER@, @RPMGROUP@)	%dir %{__prefix}/lib/rpm
 %rpmattr	%{__prefix}/lib/rpm/config.guess
 %rpmattr	%{__prefix}/lib/rpm/config.sub
@@ -365,6 +368,12 @@ exit 0
 %lang(pl)	%{__mandir}/pl/man[18]/*.[18]*
 %lang(ru)	%{__mandir}/ru/man[18]/*.[18]*
 %lang(sk)	%{__mandir}/sk/man[18]/*.[18]*
+
+%files libs
+%{__libdir}/librpm-4.3.so
+%{__libdir}/librpmdb-4.3.so
+%{__libdir}/librpmio-4.3.so
+%{__libdir}/librpmbuild-4.3.so
 
 %files build
 %defattr(-,root,root)
@@ -487,6 +496,7 @@ exit 0
 %changelog
 * Thu Aug 19 2004 Jeff Johnson <jbj@jbj.org> 4.3.2-0.7
 - avoid "can't happen" recursion while retrieving pubkeys.
+- shared libraries in separate rpm-libs package.
 
 * Fri Jul  9 2004 Jeff Johnson <jbj@jbj.org> 4.3.2-0.6
 - fix: evaluate rather than default file_contexts path. (#127501).
